<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2024 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="app_name">Composition Demo</string>
  <string name="edit">Edit</string>
  <string name="add_effects">Add effects</string>
  <string name="preview" translatable="false">Preview</string>
  <string name="preview_composition" translatable="false">Composition preview</string>
  <string name="video_sequence_items" translatable="false">Video sequence items:</string>
  <string name="select_preset_title" translatable="false">Choose preset input</string>
  <string name="export" translatable="false">Export</string>
  <string name="export_completed" translatable="false">Export completed in %.3f seconds.\nOutput: %s</string>
  <string name="export_error" translatable="false">Export error</string>
  <string name="export_started" translatable="false">Export started</string>
  <string name="add_background_audio" translatable="false">Add background audio</string>
  <string name="output_video_resolution" translatable="false">Output video resolution</string>
  <string name="hdr_mode" translatable="false">HDR mode</string>
  <string name="ok" translatable="false">OK</string>
  <string name="cancel" translatable="false">Cancel</string>
  <string name="export_settings" translatable="false">Export Settings</string>
  <string name="output_audio_mime_type" translatable="false">Output audio MIME type</string>
  <string name="output_video_mime_type" translatable="false">Output video MIME type</string>
  <string name="enable_debug_tracing" translatable="false">Enable debug tracing</string>
  <string name="use_media3_mp4_muxer" translatable="false">Use Media3 Mp4Muxer</string>
  <string name="use_media3_fragmented_mp4_muxer" translatable="false">Use Media3 FragmentedMp4Muxer</string>
</resources>
